@@ -156,9 +156,8 @@
     <td>-</td>
     <td>
       <strong>
-	_("<a href='%s'>Install</a> or <a href='%s'>upgrade</a>",
-	"../../download/binaries/autopackage/lilypond-2.6.4.3.x86.package",
-	"../../download/binaries/autopackage/lilypond-2.6.4.3-upgrade.x86.package")
+	_("<a href='%s'>Install</a>",
+	"../../download/binaries/autopackage/lilypond-2.6.4.3.x86.package")
       </strong>
     </td>
     <td>2.6.4.3</td>
@@ -203,8 +202,7 @@
     <td>
       <strong>
 	_("<a href='%s'>Install</a> or <a href='%s'>upgrade</a>",
-	"../../download/binaries/mingw/lilypond-2.6.5-1.exe",
-	"../../download/binaries/mingw/lilypond-2.6.4-5-upgrade.exe")
+	"../../download/binaries/mingw/lilypond-2.6.5-1.exe")
       </strong>
     </td>
     <td>2.6.5-1</td>
